2018-12-03  Ben Elliston  <bje@gnu.org>

	* dejagnu.h (TestState): Remove const char * variants of pass(),
	xpass(), fail(), xfail(), untested(), unresolved() for C++. A
	const char * will be implicitly converted to std::string.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Move 'Built-in Procedures' node up a level,
	removing the 'Reference' node and chapter. Make all subsubsections
	in this chapter unnumbered subheadings.

2018-12-03  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi: Fix Info node links.  The arguments to @node
	are: here, next, previous, up; not here, previous, next, up.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* Makefile.am (EXTRA_DIST): Use $(TEXINFO_TEX), not a hardcoded
	doc/texinfo.tex. With thanks to Jacob Bachmeyer.
	* Makefile.in: Regenerate.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* Makefile.am (TEXINFO_TEX): Set to doc/texinfo.tex.
	(EXTRA_DIST): Add doc/texinfo.tex. Setting TEXINFO_TEX otherwise
	prevents the distribution of the overridden texinfo.tex.
	* Makefile.in: Regenerate.
	* texinfo.tex: Move from here ..
	* doc/texinfo.tex: .. to here.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (isremote): Add verbose message.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (isremote): Pass $board to is_remote.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/fdl.texi: New.
	* doc/dejagnu.texi (Variable Index): New.
	Add more concept index entries.
	(GNU Free Documentation License): New appendix.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Procedure Index): New. Add Texinfo function
	index (@findex) entries for every built-in procedure.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Start an index.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/version.texi: New.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Add title page and frontmatter. Include
	version.texi.
	* Makefile.in: Regenerate.